--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,11 @@
 }
 
 body {
-    background-size: 100%;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 html {
+    height: 100%;
     color: white;
 }
